--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,500&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -207,42 +202,9 @@ footer {
   justify-content: space-between;
 }
 
-.input {
-  background: transparent;
-  border: 0;
-  color: #fff;
-  outline: none;
-  border: 1px solid #fff;
-  padding: 20px 10px;
-}
-
-.input::placeholder {
-  color: #fff;
-  font-family: "raleway", "sans-serif";
-}
-
-input[type=text],
-input[type=email] {
-  display: inline-block;
-  width: 49%;
-  margin-bottom: 30px;
-}
-
 .form textarea {
   width: 100%;
   margin-bottom: 15px;
-}
-
-input[type=submit] {
-  width: 120px;
-  text-align: center;
-  padding: 14px 0;
-}
-
-input[type=submit]:hover {
-  cursor: pointer;
-  color: tomato;
-  background: #fff;
 }
 
 @media screen and (max-width: 800px) {
@@ -309,501 +271,172 @@ input[type=submit]:hover {
     width: 97%;
   }
 }
-body, html {
-  height: 100%;
-  font-family: Poppins-Regular, sans-serif;
+:root {
+  --login-bg:#f6f3fa;
+  --title-bg: #000000;
+  --button-bg: #7e69b3;
+  --light-pink: #0c061a;
+  --image-bg: #feffdb ;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  background-color: #fff;
+  height: 100vh;
+  font-family: "Poppins", sans-serif;
+  background-image: linear-gradient(120deg, #ffb009 15%, #7c4cc3 60%);
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-*, ::after, ::before {
-  box-sizing: inherit;
-}
-
-body {
-  display: block;
-  margin: 8px;
-}
-
-html {
-  box-sizing: border-box;
-  font-family: sans-serif;
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.limiter {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.container-login100 {
-  width: 100%;
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.wrap-login100 {
-  width: 500px;
-  background: #fff;
+.login-container {
+  height: 43.75em;
+  width: 60em;
+  margin: 6em auto;
   border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
   overflow: hidden;
 }
 
-.p-r-55 {
-  padding-right: 55px;
-}
-
-.p-l-55 {
-  padding-left: 55px;
-}
-
-.p-b-54 {
-  padding-bottom: 54px;
-}
-
-.p-t-65 {
-  padding-top: 65px;
-}
-
-.login100-form {
-  width: 100%;
-}
-
-.login100-form-title {
-  display: block;
-  font-family: Poppins-Bold;
-  font-size: 39px;
-  color: #333;
-  line-height: 1.2;
+.login-info-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+  padding-top: 0.5rem;
+  background-color: var(--login-bg);
 }
 
-.p-b-49 {
-  padding-bottom: 49px;
+.image-container {
+  padding: 2rem;
+  width: 50%;
+  background-color: var(--image-bg);
+  box-sizing: border-box;
 }
 
-.validate-input {
+.title {
+  text-transform: capitalize;
+  font-size: 2.25rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: var(--title-bg);
+}
+
+.social-login {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  cursor: pointer;
+}
+
+.social-login-element {
+  width: 12.5rem;
+  height: 3.75rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  border-radius: 5px;
+  border: 1px solid var(--button-bg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-login-element img {
+  width: 1.875rem;
+  height: 1.875rem;
   position: relative;
-}
-
-.wrap-input100 {
-  width: 100%;
-  position: relative;
-  border-bottom: 2px solid #d9d9d9;
-}
-
-.m-b-23 {
-  margin-bottom: 23px;
-}
-
-.label-input100 {
-  font-family: Poppins-Regular;
-  font-size: 14px;
-  color: #333;
-  line-height: 1.5;
-  padding-left: 7px;
-}
-
-.input100 {
-  font-family: Poppins-Medium;
-  font-size: 16px;
-  color: #333;
-  line-height: 1.2;
-  display: block;
-  width: 100%;
-  height: 55px;
-  background: 0 0;
-  padding: 0 7px 0 43px;
-}
-
-input {
-  outline: none;
-  border: none;
-}
-
-button, input {
-  overflow: visible;
-}
-
-button, input, optgroup, select, textarea {
-  margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
-
-[role=button], a, area, button, input, label, select, summary, textarea {
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-}
-
-.focus-input100 {
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
   top: 0;
-  left: 0;
-  pointer-events: none;
+  left: -0.625rem;
 }
 
-.validate-input {
-  position: relative;
+.social-login-element:hover {
+  background-color: rgb(143, 104, 175);
 }
 
-.wrap-input100 {
-  width: 100%;
-  position: relative;
-  border-bottom: 2px solid #d9d9d9;
+.login-info-container > p {
+  font-size: 1.25em;
+  margin-top: 1.5em;
 }
 
-.text-right {
-  text-align: right;
-}
-
-.p-b-31 {
-  padding-bottom: 31px;
-}
-
-.p-t-8 {
-  padding-top: 8px;
-}
-
-.text-right {
-  text-align: right !important;
-}
-
-a {
-  font-family: Poppins-Regular;
-  font-size: 14px;
-  line-height: 1.7;
-  color: #666;
-  margin: 0;
-  transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-}
-
-[role=button], a, area, button, input, label, select, summary, textarea {
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-}
-
-a {
-  color: #007bff;
-  text-decoration: none;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
-}
-
-.container-login100-form-btn {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
+.inputs-container {
+  height: 55%;
+  width: 85%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.login100-form-bgbtn {
-  position: absolute;
-  z-index: -1;
-  width: 300%;
-  height: 100%;
-  /*background: #a64bf4;*/
-  background: -webkit-linear-gradient(right, #00dbde, #fc00ff, #00dbde, #fc00ff);
-  background: -o-linear-gradient(right, #00dbde, #fc00ff, #00dbde, #fc00ff);
-  background: -moz-linear-gradient(right, #00dbde, #fc00ff, #00dbde, #fc00ff);
-  background: linear-gradient(right, #00dbde, #fc00ff, #00dbde, #fc00ff);
-  top: 0%;
-  left: -100%;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s;
+.input, .btn {
+  width: 90%;
+  height: 3.125rem;
+  font-size: 1em;
 }
 
-.login100-form-btn {
-  font-family: Poppins-Medium;
-  font-size: 16px;
-  color: #fff;
-  line-height: 1.2;
+.input {
+  padding-left: 20px;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  box-sizing: border-box;
+}
+
+.input:hover {
+  border: 2px solid var(--button-bg);
+}
+
+.btn {
+  width: 80%;
+  letter-spacing: 1px;
   text-transform: uppercase;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 20px;
-  width: 100%;
-  height: 50px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--button-bg);
+  cursor: pointer;
 }
 
-.txt1 {
-  font-family: Poppins-Regular;
-  font-size: 14px;
-  line-height: 1.5;
-  color: #666;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.p-b-20 {
-  padding-bottom: 20px;
-}
-
-.p-t-54 {
-  padding-top: 54px;
-}
-
-.flex-c-m {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  -ms-align-items: center;
-  align-items: center;
-}
-
-.login100-social-item {
-  font-size: 25px;
-  color: #fff;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin: 5px;
-}
-
-.bg1 {
-  background-color: #3b5998;
-}
-
-a {
-  font-family: Poppins-Regular;
-  font-size: 14px;
-  line-height: 1.7;
-  color: #666;
+.inputs-container p {
   margin: 0;
-  transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
 }
 
-[role=button], a, area, button, input, label, select, summary, textarea {
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
+.span {
+  color: var(--light-pink);
+  font-weight: 600;
+  cursor: pointer;
 }
 
-a {
-  color: #007bff;
-  text-decoration: none;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
+@media screen and (max-width: 1000px) {
+  .login-container {
+    width: 70%;
+    margin-top: 3rem;
+  }
+  .login-info-container {
+    width: 100%;
+    border-radius: 5px;
+  }
+  .image-container {
+    display: none;
+  }
 }
-
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@media screen and (max-width: 650px) {
+  .login-container {
+    width: 90%;
+  }
 }
-
-.login100-social-item {
-  font-size: 25px;
-  color: #fff;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin: 5px;
+@media screen and (max-width: 500px) {
+  .login-container {
+    height: 90%;
+  }
+  .social-login {
+    flex-direction: column;
+    align-items: center;
+    height: 30%;
+  }
+  .login-info-container > p {
+    margin: 0;
+  }
 }
-
-.bg2 {
-  background-color: #1da1f2;
-}
-
-a {
-  font-family: Poppins-Regular;
-  font-size: 14px;
-  line-height: 1.7;
-  color: #666;
-  margin: 0;
-  transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-}
-
-[role=button], a, area, button, input, label, select, summary, textarea {
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-}
-
-a {
-  color: #007bff;
-  text-decoration: none;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
-}
-
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.login100-social-item {
-  font-size: 25px;
-  color: #fff;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin: 5px;
-}
-
-.bg3 {
-  background-color: #ea4335;
-}
-
-a {
-  font-family: Poppins-Regular;
-  font-size: 14px;
-  line-height: 1.7;
-  color: #666;
-  margin: 0;
-  transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-}
-
-[role=button], a, area, button, input, label, select, summary, textarea {
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-}
-
-a {
-  color: #007bff;
-  text-decoration: none;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
-}
-
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.login100-social-item {
-  font-size: 25px;
-  color: #fff;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin: 5px;
-}
-
-.bg3 {
-  background-color: #ea4335;
-}
-
-a {
-  font-family: Poppins-Regular;
-  font-size: 14px;
-  line-height: 1.7;
-  color: #666;
-  margin: 0;
-  transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-}
-
-[role=button], a, area, button, input, label, select, summary, textarea {
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-}
-
-a {
-  color: #007bff;
-  text-decoration: none;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
-}
-
 * {
   box-sizing: border-box;
 }
